--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -1,12 +1,16 @@
+.Button {
+    outline: none;
+    color: var(--primary-color);
+}
+
 .clear {
     padding: 0;
     margin: 0;
     border: none;
     background: none;
-    outline: none;
 }
 
-.error {
+.outline {
     padding: 10px 20px;
     background: var(--inverted-bg-color);
     color: var(--primary-color);
