--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -3,8 +3,11 @@
 @import './themes/light';
 @import './themes/dark';
 
-.app {
+body {
     font: var(--font-m);
+}
+
+.app {
     background: var(--bg-color);
     color: var(--primary-color);
     min-height: 100vh;
