--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -2,6 +2,7 @@
 @import './variables/global';
 @import './themes/light';
 @import './themes/dark';
+@import './themes/light-blue';
 
 body {
     font: var(--font-m);
