article, skeleton, code block

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -3,4 +3,9 @@
     --inverted-bg-color: #fff;
     --primary-color: #00b86e;
     --secondary-color: #fff;
+
+    // skeleton
+    --skeleton-color: #00b86e;
+    --skeleton-shadow: #252525;
+    --code-bg: #0e0e0e;
 }
