--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -3,4 +3,9 @@
     --inverted-bg-color: #000f09;
     --primary-color: #00b86e;
     --secondary-color: #000f09;
+
+    // skeleton
+    --skeleton-color: #ddd;
+    --skeleton-shadow: #bebebe;
+    --code-bg: #ececec;
 }
