--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -19,6 +19,19 @@ body {
 }
 
 .page-wrapper {
+    width: 100%;
     flex-grow: 1;
     padding: 20px 20px 20px 40px;
+    height: calc(100vh - var(--navbar-height));
+    overflow-y: auto;
+
+    &::-webkit-scrollbar {
+        width: 5px;
+        background: var(--inverted-bg-color);
+    }
+
+    &::-webkit-scrollbar-thumb {
+        border-radius: 5px;
+        background: var(--primary-color);
+    }
 }
