--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -1,9 +1,10 @@
 .Sidebar {
     height: calc(100vh - var(--navbar-height));
     width: var(--sidebar-width);
+    min-width: var(--sidebar-width);
     background: var(--inverted-bg-color);
     position: relative;
-    transition: width 0.3s ease;
+    transition: all 0.3s ease;
     padding: 20px;
     display: flex;
     flex-direction: column;
@@ -52,4 +53,5 @@
 
 .collapsed {
     width: var(--sidebar-width-collapsed);
+    min-width: var(--sidebar-width-collapsed);
 }
