add article list, article item, skeleton

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -6,6 +6,7 @@
 
     // skeleton
     --skeleton-color: #00b86e;
-    --skeleton-shadow: #252525;
+    --skeleton-shadow: #5f5f5f;
     --code-bg: #0e0e0e;
+    --card-bg: #252525;
 }
