--- a/src/shared/ui/Card/Card.module.scss
+++ b/src/shared/ui/Card/Card.module.scss
@@ -1,5 +1,12 @@
 .Card {
     padding: 15px;
     border-radius: 15px;
+}
+
+.normal {
     background: var(--card-bg);
+}
+
+.outlined {
+    border: 1px solid var(--primary-color);
 }
