--- a/src/shared/ui/Drawer/Drawer.module.scss
+++ b/src/shared/ui/Drawer/Drawer.module.scss
@@ -53,3 +53,15 @@
         transform: translateY(100%);
     }
 }
+
+.sheet {
+    z-index: 10;
+    position: fixed;
+    left: 2vw;
+    height: calc(100vh + 100px);
+    width: 96vw;
+    border-radius: 12px 12px 0 0;
+    background: var(--bg-color);
+    touch-action: none;
+    padding: 15px;
+}
