--- a/src/shared/ui/Avatar/Avatar.module.scss
+++ b/src/shared/ui/Avatar/Avatar.module.scss
@@ -3,3 +3,13 @@
     height: 100px;
     width: 100px;
 }
+
+.errorFallback {
+    color: var(--primary-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 10px;
+    border-radius: 50%;
+    background: var(--inverted-bg-color);
+}
